crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_all_sensors_skip.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `alpha` | ⏭ skip | no | `artifacts/alpha/report.json` · `artifacts/alpha/comment.md` |
| `beta` | ⏭ skip | no | `artifacts/beta/report.json` · `artifacts/beta/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Optional

- `alpha`: ⏭ skip · report `artifacts/alpha/report.json` · comment `artifacts/alpha/comment.md`
- `beta`: ⏭ skip · report `artifacts/beta/report.json` · comment `artifacts/beta/comment.md`

<!-- cockpit:end -->
