crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_budget_truncation.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 217
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` · `artifacts/scanner/comment.md` · _truncated_ |

### Highlights

(showing up to **2**)

1. ❌ **scanner**: `SEC-001` at `src/auth.rs:1` — Message for SEC-001
2. ❌ **scanner**: `SEC-002` at `src/auth.rs:15` — Message for SEC-002
3. ⚠️ **scanner**: `SEC-003` at `src/db.rs:30` — Message for SEC-003
4. ℹ️ **scanner**: `SEC-004` at `src/config.rs:5` — Message for SEC-004

### Annotations

1. ❌ **scanner**: `SEC-001` at `src/auth.rs:1` — Message for SEC-001
2. ❌ **scanner**: `SEC-002` at `src/auth.rs:15` — Message for SEC-002

_Showing 2 of 4 annotations (capped by `max_annotations`)._

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json` · comment `artifacts/scanner/comment.md`

<!-- cockpit:end -->
