crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_empty_findings.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 306
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|

### Highlights

_No highlights._

### Annotations

_No annotations._

<!-- cockpit:end -->
