crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_fail_report_with_findings.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 176
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `clippy` | ❌ fail | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **clippy**: `E0001` at `src/main.rs:10` — Message for E0001
2. ⚠️ **clippy**: `W0002` at `src/lib.rs:42` — Message for W0002
3. ℹ️ **clippy**: `I0003` at `src/utils.rs:7` — Message for I0003

### Annotations

1. ❌ **clippy**: `E0001` at `src/main.rs:10` — Message for E0001
2. ⚠️ **clippy**: `W0002` at `src/lib.rs:42` — Message for W0002
3. ℹ️ **clippy**: `I0003` at `src/utils.rs:7` — Message for I0003

### Lint

- `clippy`: ❌ fail · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`
  - repro: `cargo clippy`

<!-- cockpit:end -->
