crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_findings_with_annotations.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 360
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `alpha` | ❌ fail | yes | `artifacts/alpha/report.json` · `artifacts/alpha/comment.md` |
| `beta` | ⚠️ warn | no | `artifacts/beta/report.json` · `artifacts/beta/comment.md` |

### Highlights

(showing up to **5**)

1. ❌ **alpha**: `E1` at `src/lib.rs:5` — Message for E1
2. ❌ **alpha**: `E2` at `src/main.rs:20` — Message for E2
3. ⚠️ **beta**: `W1` at `src/utils.rs:10` — Message for W1
4. ℹ️ **beta**: `I1` — Message for I1

### Annotations

1. ❌ **alpha**: `E1` at `src/lib.rs:5` — Message for E1
2. ❌ **alpha**: `E2` at `src/main.rs:20` — Message for E2
3. ⚠️ **beta**: `W1` at `src/utils.rs:10` — Message for W1
4. ℹ️ **beta**: `I1` — Message for I1

### Tests

- `alpha`: ❌ fail · report `artifacts/alpha/report.json` · comment `artifacts/alpha/comment.md`
  - repro: `cargo test`

### Lint

- `beta`: ⚠️ warn · report `artifacts/beta/report.json` · comment `artifacts/beta/comment.md`

<!-- cockpit:end -->
