crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_many_sensors_five_sections.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `clippy` | ⚠️ warn | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |
| `cargo-test` | ✅ pass | yes | `artifacts/cargo-test/report.json` · `artifacts/cargo-test/comment.md` |
| `trivy` | ❌ fail | yes | `artifacts/trivy/report.json` · `artifacts/trivy/comment.md` |
| `covguard` | ⚠️ warn | no | `artifacts/covguard/report.json` · `artifacts/covguard/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **trivy**: `CVE-2024-0001` at `Cargo.lock:100` — Message for CVE-2024-0001
2. ❌ **trivy**: `CVE-2024-0002` at `Cargo.lock:200` — Message for CVE-2024-0002
3. ⚠️ **clippy**: `W-UNUSED` at `src/lib.rs:5` — Message for W-UNUSED
4. ℹ️ **covguard**: `COV-LOW` at `src/utils.rs:1` — Message for COV-LOW

### Annotations

1. ❌ **trivy**: `CVE-2024-0001` at `Cargo.lock:100` — Message for CVE-2024-0001
2. ❌ **trivy**: `CVE-2024-0002` at `Cargo.lock:200` — Message for CVE-2024-0002
3. ⚠️ **clippy**: `W-UNUSED` at `src/lib.rs:5` — Message for W-UNUSED
4. ℹ️ **covguard**: `COV-LOW` at `src/utils.rs:1` — Message for COV-LOW

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

### Lint

- `clippy`: ⚠️ warn · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`

### Tests

- `cargo-test`: ✅ pass · report `artifacts/cargo-test/report.json` · comment `artifacts/cargo-test/comment.md`

### Security

- `trivy`: ❌ fail · report `artifacts/trivy/report.json` · comment `artifacts/trivy/comment.md`

### Coverage

- `covguard`: ⚠️ warn · report `artifacts/covguard/report.json` · comment `artifacts/covguard/comment.md`

<!-- cockpit:end -->
