crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_max_highlights_one.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` · `artifacts/scanner/comment.md` · _truncated_ |

### Highlights

(showing up to **1**)

1. ❌ **scanner**: `SEC-CRIT` at `src/auth.rs:42` — Message for SEC-CRIT

### Annotations

1. ❌ **scanner**: `SEC-CRIT` at `src/auth.rs:42` — Message for SEC-CRIT

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json` · comment `artifacts/scanner/comment.md`

<!-- cockpit:end -->
