crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_mixed_verdicts.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 283
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `covguard` | ⏭ skip | no | `artifacts/covguard/report.json` · `artifacts/covguard/comment.md` |
| `diffguard` | ⚠️ warn | yes | `artifacts/diffguard/report.json` · `artifacts/diffguard/comment.md` |

### Highlights

(showing up to **10**)

1. ⚠️ **diffguard**: `DG-001` at `src/lib.rs:42` — Message for DG-001

### Annotations

1. ⚠️ **diffguard**: `DG-001` at `src/lib.rs:42` — Message for DG-001

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`
  - repro: `cargo build`

### Coverage

- `covguard`: ⏭ skip · report `artifacts/covguard/report.json` · comment `artifacts/covguard/comment.md`

### Policy

- `diffguard`: ⚠️ warn · report `artifacts/diffguard/report.json` · comment `artifacts/diffguard/comment.md`

<!-- cockpit:end -->
