crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_pass_report.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
assertion_line: 136
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

<!-- cockpit:end -->
