crates/cockpitctl-render/tests/snapshots/snapshot_tests__snapshot_warn_is_fail_policy.snap
---
source: crates/cockpitctl-render/tests/snapshot_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ⚠️ warn | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **5**)

1. ⚠️ **lint**: `W001` at `src/a.rs:10` — Message for W001
2. ⚠️ **lint**: `W002` at `src/b.rs:20` — Message for W002

### Annotations

1. ⚠️ **lint**: `W001` at `src/a.rs:10` — Message for W001
2. ⚠️ **lint**: `W002` at `src/b.rs:20` — Message for W002

### Lint

- `lint`: ⚠️ warn · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`
  - repro: `cargo clippy`

<!-- cockpit:end -->
